# Investigacion

./: .gitignore  Adaption_Little_Class1.cpp  Adaption_Little_Class1.h  Adaption_Little_Class2.cpp  Adaption_Little_Class2.h  Adaption_Little_Class3.cpp  Adaption_Little_Class3.h  Big_Class.cpp  Big_Class.h  CMakeLists.txt  IPaymentProccess.cpp  IPaymentProccess.h  Little_Class1.cpp  Little_Class1.h  Little_Class2.cpp  Little_Class2.h  Little_Class3.cpp  Little_Class3.h  main.cpp
