cmake_minimum_required(VERSION 3.19)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp Big_Class.cpp Big_Class.h Little_Class1.cpp Little_Class1.h IPaymentProccess.cpp IPaymentProccess.h Adaption_Little_Class1.cpp Adaption_Little_Class1.h Little_Class2.cpp Little_Class2.h Adaption_Little_Class2.cpp Adaption_Little_Class2.h)
